# rustiot

embsens/: Cargo.toml  README.md  mqtt.md  notes.md
embsens/.cargo/: config.toml
embsens/src/: main.rs  tiny_mqtt.rs
sensor/: Cargo.toml  todo.md
sensor/.cargo/: config.toml
sensor/src/: fsm.rs  http.rs  main.rs  main_rec.rs  mqtt.rs  shtc3.rs  wifi.rs
