[package]
name = "embsens"
version = "0.1.0"
authors = ["Marco <marco@mirlo.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.9.0", features = ["embassy", "async", "embassy-time-systick"] }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
embassy-executor = { version = "0.2.0", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
static_cell = "1.0.0"
embassy-time = { version = "0.1.1", features = ["nightly"] }
icm42670 = "0.1.1"
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
# https://github.com/embassy-rs/embassy/tree/main/embassy-embedded-hal


embedded-hal-nb    = { version = "=1.0.0-alpha.2" }
embedded-hal       = { version = "0.2.7", features = ["unproven"] }
embedded-hal-async = { version = "0.2.0-alpha.1"  }
lis3dh-async = "0.7.0"
shared-bus = { version = "0.2.5", features = ["cortex-m"] }
