[package]
name = "miniwifi"
version = "0.1.0"
authors = ["Marco <marco@mirlo.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "b82f1e7009bef7e32f0918be5b186188aa5e7109", features = ["macros", "async"] }
embassy-executor = { version = "0.2.0", package = "embassy-executor", features = ["nightly", "executor-thread", "integrated-timers", "arch-riscv32"] }
embassy-futures = { version = "0.1.0" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594" }
# embedded-hal = "0.2.3"
embedded-hal = "0.2.7"
# embedded-hal       = { version = "0.2.7", features = ["unproven"] }
embedded-hal-async = { version = "0.2.0-alpha.1" }
# embedded-hal-async = { version = "0.2.0-alpha.1"  }
embedded-hal-nb    = { version = "=1.0.0-alpha.2" }
embedded-io = "0.4.0"
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-hal-common = { version = "0.9.0" }
esp-println       = { version = "0.5.0", features = ["esp32c3", "log"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "abf6d4b", features = ["async", "esp32c3", "wifi", "embassy-net", "async", "embedded-svc", "embassy-net"] }
esp-wifi-sys = { git = "https://github.com/esp-rs/esp-wifi", rev = "abf6d4b", features = ["esp32c3"] }
esp32c3-hal = { version = "0.9.0", features = [ "async", "embassy", "embassy-time-timg0" ] }
futures-util = { version = "0.3.17", default-features = false }
heapless = { version = "0.7.14", default-features = false }
log = "0.4.17"
smoltcp = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
icm42670 = "0.1.1"
static_cell = "1.0.0"

# Añadidas desde workspace.dependencies
# critical-section = "1.1.1"
# atomic-polyfill = "1.0.1"


[build-dependencies]
anyhow = "1.0.68"

[features]
wifi-logs = ["esp-wifi/wifi-logs"]
dump-packets = ["esp-wifi/dump-packets"]
utils = ["esp-wifi/utils"]
enumset = ["esp-wifi/enumset"]


[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3


[profile.dev]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
