[package]
name = "sensor"
version = "0.1.0"
authors = ["Marco <marco@mirlo.org>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = "0.45"
embedded-svc = "0.24"
esp-idf-hal = "0.40"
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"

[build-dependencies]
embuild = "0.31.1"
anyhow = "1"
